--- a/CSS/03_CSS/add/style.css
+++ b/CSS/03_CSS/add/style.css
@@ -29,12 +29,20 @@
 }
 
 .menu_level2 {
-    display:none;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: -2px;
+    height: 0;
+    overflow: hidden;
+    transition-duration: 2s;
     
 }
 
 
 .menu_level1 > div:hover .menu_level2 {
+    height: 90px;
     display: flex;
     flex-direction: column;
     position: absolute;
